# UnicoreChain

./: Cargo.toml  README.md  unicore.toml
chain/: Cargo.toml
chain/src/: block.rs  block_header.rs  lib.rs  transaction.rs  transaction_helpers.rs
cli/: Cargo.toml  main.rs
cli/src/: cli.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
db/: Cargo.toml
keys/: Cargo.toml
keys/src/: address.rs  generator.rs  keypair.rs  lib.rs  private.rs  public.rs
miner/: Cargo.toml
p2p/: Cargo.toml
p2p/src/: client.rs  lib.rs  server.rs
primitives/: Cargo.toml
primitives/src/: bytes.rs  compact.rs  hash.rs  lib.rs
src/: main.rs
sync/: Cargo.toml
