[package]
name = "unicore"
version = "0.1.0"
authors = ["carlosgj94 <carlosgj94@gmail.com>"]
publish = false

[dependencies]
unicore_chain = { path = "./chain" }
unicore_cli = { path = "./cli" }
unicore_crypto = { path = "./crypto" }
unicore_db = { path = "./db" }
unicore_keys = { path = "./keys" }
unicore_miner = { path = "./miner" }
unicore_p2p = { path = "./p2p" }
unicore_sync = { path = "./sync" }
serde_derive = "1.0"
